# claude-session-recorder

./: .gitignore  README.md  build.py  compose.py  demo.tape  overlay.py  rsync-demo-final.srt  setup_dirs.sh  subs.srt  timeline.json
.claude/: settings.json
audio/: voice.srt
awk/: CLAUDE.md  lesson.py  manifest.md  setup.sh
clip/: CLAUDE.md  config.toml
clips/: CLAUDE.md  config.toml
cp/: CLAUDE.md  lesson.py  manifest.md  setup.sh
df/: CLAUDE.md  lesson.py  manifest.md  setup.sh
docs/: lessons-learned.md  panel-design.md  sync-model.md
engine/: CLAUDE.md  CLAUDE.tmpl.md  config.toml  lesson.skel.py
engine/experimental/session-recorder/live/: CONTRIBUTING.md  Makefile  README.md  author.py  autoanswer_questions.py  claude_sandbox.sh  detect_anchors.py  gen_capture_tape.py  gen_session_tape.py  ledger.py  lint.py  overlay.py  panel.py  pyproject.toml  qmonitor.py  qnav.py  qparse.py  record.py  requirements.txt  run_v6.sh  run_v6_tmux.sh  script.container.json  script.example.json  script.mixed.json  script.question.json  script.robust.json  script.robust.multi.json  session_overlay.py  session_panel.py  splice.py  strategies.py  validate_sync.py  verify_session.py  vhs_stop_sentinel.sh
engine/experimental/session-recorder/live/docs/: batch-production-pipeline.md  ledger-downstream-patterns.md
engine/experimental/session-recorder/live/tests/: conftest.py  test_author.py  test_author_ledger.py  test_autoanswer.py  test_capture_tape.py  test_detect_anchors.py  test_invariant.py  test_ledger.py  test_lint.py  test_overlay.py  test_overlay_io.py  test_panel.py  test_qmonitor.py  test_qnav.py  test_qparse.py  test_reconcile.py  test_smoke.py  test_splice.py  test_splice_io.py  test_strategies.py  test_timeline.py
find/: CLAUDE.md  lesson.py  setup.sh
find-deep/: CLAUDE.md  lesson.py  manifest.md  setup.sh
fzf/: CLAUDE.md  lesson.py  manifest.md  setup.sh
grep/: CLAUDE.md  lesson.py  manifest.md  setup.sh
ifconfig/: CLAUDE.md  lesson.py  manifest.md  setup.sh
jq/: CLAUDE.md  lesson.py  manifest.md  setup.sh
material/: README.md
rg/: CLAUDE.md  lesson.py  manifest.md
rsync/: CLAUDE.md  lesson.py  setup.sh
sed/: CLAUDE.md  lesson.py  manifest.md  setup.sh
ssh/: CLAUDE.md  manifest.md  setup.sh
tar/: CLAUDE.md  (+3 more)
(+124 files in other folders)
